fix(tokens): Add correct values to oneSalesforce theme (#3649)
* fix(tokens): Add correct values to oneSalesforce theme

* Update snapshot

--- a/packages/design-system/ui/components/brand-band/docs.mdx
+++ b/packages/design-system/ui/components/brand-band/docs.mdx
@@ -36,8 +36,8 @@ If you need to remove the brand band image from the component, you can simply pa
 
 ## Using the group background image
 
-<BrandBandExample size="large" image="group" />
+<BrandBandExample size="medium" image="group" />
 
 ## Using the user profile background image
 
-<BrandBandExample size="large" image="user" />
+<BrandBandExample size="medium" image="user" />
