--- a/packages/design-system/ui/components/breadcrumbs/docs.mdx
+++ b/packages/design-system/ui/components/breadcrumbs/docs.mdx
@@ -1,13 +1,14 @@
 import CodeView from '../../../shared/components/CodeView';
 import Example from '../../../shared/components/Example';
-import { BreadcrumbsBase, BreadcrumbsWithOverflow } from './base/example';
+import { getDisplayElementById } from '../../shared/helpers';
 import Blockquote from '../../../shared/components/Blockquote';
+import * as Breadcrumbs from './base/example';
 
 <div className="lead">
   Use breadcrumbs to note the path of a record and help the user to navigate back to the parent.
 </div>
 
-## Structure
+## About the Breadcrumbs component
 
 Breadcrumbs are typically constructed with an <code className="doc">ol</code> because their order matters. You mark up breadcrumbs with classes from the horizontal list utility. When you add the <code className="doc">.slds-breadcrumb</code> class, the separators are automatically generated.
 
@@ -15,17 +16,17 @@ Breadcrumbs are typically constructed with an <code className="doc">ol</code> be
   Place the breadcrumb in a <code className="doc">nav</code> element with <code className="doc">role="navigation"</code>. The <code className="doc">nav</code> element is also marked-up with <code className="doc">aria-label="Breadcrumbs"</code> to describe the type of navigation.
 </Blockquote>
 
-## Variations
-
-### Base/Default
-
-A simple horizontal list of links.
+## Base
 
 <Example title="Default Breadcrumbs">
   <CodeView>
-    <BreadcrumbsBase></BreadcrumbsBase>
+    <Breadcrumbs.Context>
+      {Breadcrumbs.default}
+    </Breadcrumbs.Context>
   </CodeView>
 </Example>
+
+## Variations
 
 ### With Overflow
 
@@ -33,6 +34,8 @@ The overflow menu breadcrumbs variant is a composition of the overflow menu with
 
 <Example title="Breadcrumbs with Overflow">
   <CodeView>
-    <BreadcrumbsWithOverflow></BreadcrumbsWithOverflow>
+    <Breadcrumbs.Context>
+      {getDisplayElementById(Breadcrumbs.states, "overflow-breadcrumbs")}
+    </Breadcrumbs.Context>
   </CodeView>
 </Example>
