chore(docs): Migrate Breadcrumbs MDX - address feedback

--- a/packages/design-system/ui/components/breadcrumbs/docs.mdx
+++ b/packages/design-system/ui/components/breadcrumbs/docs.mdx
@@ -3,7 +3,7 @@ import { getDisplayElementById } from '../../shared/helpers';
 import Blockquote from '../../../shared/components/Blockquote';
 import * as Breadcrumbs from './base/example';
 
-<div className="lead">
+<div className="doc lead">
   Use breadcrumbs to note the path of a record and help the user to navigate back to the parent.
 </div>
 
@@ -17,7 +17,7 @@ Breadcrumbs are typically constructed with an <code className="doc">ol</code> be
 
 ## Base
 
-<CodeView style={{height: '50px'}}>
+<CodeView>
   {Breadcrumbs.default}
 </CodeView>
 
