Summer-to-Winter Merge (#3786)
* chore(docs): Migrate Tiles docs to mdx

* missing file

* chore(docs) - textarea mdx

* chore(docs): Migrate Spinners docs to mdx (#3779)

* Update Spinners docs to MDX

* Add missing _brand modifier example to array, break out modifiers into their own section

* Add additional annotations, add additional examples for thoroughness, update MDX documentation

* Remove extra example strings, update MDX headings and structure

* Remove extra whitespace

* Remove modifiers and utilities that were used in incorrect examples

* chore(scoped-tabs): Migrate scoped-tabs to mdx (#3764)

* textarea mdx - consistent code around code snippets

* migrate Summary Detail docs to mdx (#3772)

* migrate Tooltips docs to mdx (#3777)

* migrate Toast docs to mdx (#3775)

* migrate Timepicker docs to mdx (#3773)

* migrate Split View docs to mdx (#3771)

* migrate Slider docs to mdx (#3769)

* migrate Select docs to mdx (#3768)

* fix(docs): Correct bad link (#3784)

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* chore(docs) - Migrate Visual Picker to MDX (#3783)

* chore(docs): update trial-bar docs to mdx (#3781)

--- a/packages/design-system/ui/components/input/docs.mdx
+++ b/packages/design-system/ui/components/input/docs.mdx
@@ -27,7 +27,7 @@ The static state is for form elements that can’t be modified by the user. It i
 
 In order to have an actionable SVG within the input, like a clear or increment/decrement button, the icon must be contained within a button, not an anchor `<a>`, in order for pointer events to work properly.
 
-You can see examples of the correct markup in the [Left Icon & Clear Button example](/input/?example=double-icon&variant=base) or the [Counter example](/input/?example=increment-decrement-counter&variant=base).
+You can see examples of the correct markup in the [Left Icon & Clear Button example](/components/input/?example=double-icon&variant=base) or the [Counter example](/components/input/?example=increment-decrement-counter&variant=base).
 
 ### Accessibility
 
